; ModuleID = '/home/carl/AnghaBench/php-src/Zend/extr_zend_alloc.c_zend_mm_chunk_extend.c'
source_filename = "/home/carl/AnghaBench/php-src/Zend/extr_zend_alloc.c_zend_mm_chunk_extend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_8__* }
%struct.TYPE_8__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 (%struct.TYPE_8__*, i8*, i64, i64)* }

@MAP_FAILED = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_7__*, i8*, i64, i64)* @zend_mm_chunk_extend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zend_mm_chunk_extend(%struct.TYPE_7__* %0, i8* %1, i64 %2, i64 %3) #0 {
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = load i64, i64* %7, align 8
  %11 = getelementptr inbounds i8, i8* %9, i64 %10
  %12 = load i64, i64* %8, align 8
  %13 = load i64, i64* %7, align 8
  %14 = sub i64 %12, %13
  %15 = call i32* @zend_mm_mmap_fixed(i8* %11, i64 %14)
  %16 = icmp ne i32* %15, null
  %17 = zext i1 %16 to i32
  ret i32 %17
}

declare dso_local i32* @zend_mm_mmap_fixed(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
